# house-prices-competition-kaggle

./: .gitignore  README.md  pyproject.toml
data/submissions/: submission.csv
docs/: uv-guide.md
notebooks/: eda.ipynb
src/: main.py
src/core/: config.py  logging.py
src/data/: load.py  preprocess.py
src/features/: build_features.py
src/models/: evaluate.py  hyperparameter_tuning.py  pipeline.py  predict.py  train.py
